
0.17 Sun Dec 30 08:13:42 2012
  - Add license field to META files
  - eliminate unwanted dependency on Modern::Perl

0.16 Fri Dec 28 09:38:47 2012
  - Fix the Windows recognition regex in the code as well.
  - rt #80341: Accept use Modern::Perl as strict and warnings. (Peter Vereshagin)
  - rt #55186: Be less strict about filenames when calling syntax_ok directly
       (Frank Lichtenheld)

0.15 - Thu Dec 27 09:59:29 2012
  - rt #81849 and rt #79515: disable the coverage testing unless
    a flag is enabled as that was stuck on Windows.
  - rt #44187: Fix test on Cygwin.
  - Add link to Github repository.
  - Co-maintainer: Gabor Szabo (SZABGAB).

0.14 - Sat Feb 13 19:40:00 2010 EST
  - rt #44216: now taint safe - thanks Lars
  - rt #44607: compatible with Moose and Mouse - thanks Apocalypse
  - Removed Test::Pod dependency

0.13 - Fri Jan 30 19:25:00 2009 PST
  - rt #42922: Assignment to read only value - thanks Andreas

0.12 - Sun Jan 25 17:55:00 2009 PST
  - rt #42575: Can deal with filenames with spaces - thanks Renee
  - rt #42576: Deal with windows dos shorten filnames - thanks Renee

0.11 - Sun Jan 18 20:30:00 2009 PST
  - rt #41604: Allow to skip "trusted" files - thanks Jon

0.10 - Sun Jan 18 19:50:00 2009 PST
  - rt #41524: Fixed warning "no_plan takes no arguments ..." - thanks Apocalypse

0.09 - Sat Feb 23 23:50:00 2008 GMT
  - Addressed rt #32704 Cleaning up /tmp directory (ANDK)
  - Added $DEVEL_COVER_OPTIONS to give more control on which files to select for code coverage

0.08 - Tue Sep  5 16:50:00 2006 GMT
  - Adressed ticket #21196. (smueller)
  - Made the untaint pattern less vulnerable to win32
    paths. (smueller)
  - Now quoting meta-characters before use in regex.
    (smueller)
  - Skipping tests that fail on win32 because of the
    testing procedure (smueller)

0.07 - Mon May 29 03:45:00 2005 GMT
  Skip blib/man directory in all_perl_files_ok() and all_cover_ok()

0.06 - Mon Mar 25 00:10:00 2005 GMT